--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -13,7 +14,7 @@
 
 <AnchorPane prefHeight="279.0" prefWidth="444.0" style="-fx-background-color: #38598b;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
    <children>
-      <Button fx:id="LoginBtn" layoutX="301.0" layoutY="128.0" mnemonicParsing="false" onMouseClicked="#LoginBtn_Click" prefHeight="83.0" prefWidth="74.0" style="-fx-background-color: #e7eaf6;" text="Enter" />
+      <Button fx:id="LoginBtn" layoutX="297.0" layoutY="173.0" mnemonicParsing="false" onMouseClicked="#LoginBtn_Click" prefHeight="34.0" prefWidth="90.0" style="-fx-background-color: #e7eaf6;" text="Enter" />
       <TextField fx:id="UserBox" layoutX="72.0" layoutY="131.0" prefHeight="34.0" prefWidth="201.0" promptText="User Name" style="-fx-background-color: #e7eaf6;" />
       <Text fill="#a2a8d3" layoutX="173.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WA Videos" textAlignment="CENTER" wrappingWidth="188.36627197265625">
          <font>
@@ -27,6 +28,7 @@
          </image>
       </ImageView>
       <Hyperlink fx:id="NewAccountBtn" layoutX="38.0" layoutY="215.0" onAction="#NewAccountBtn_Click" text="Click Here To Create Account Using Entered Data" textFill="#a2a8d3" />
+      <CheckBox fx:id="adminchkbox" layoutX="279.0" layoutY="139.0" mnemonicParsing="false" onAction="#adminchkbox_Clicked" text="Admin Account" textFill="#a2a8d3" />
    </children>
    <effect>
       <InnerShadow choke="0.84" />
