--- a/src/application/MainForm.fxml
+++ b/src/application/MainForm.fxml
@@ -171,7 +171,7 @@
                   <Insets left="5.0" top="5.0" />
                </GridPane.margin>
             </ImageView>
-            <ImageView fx:id="UserIcon" accessibleRole="BUTTON" fitHeight="73.0" fitWidth="61.0" onMouseClicked="#UserIcon_Clicked" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
+            <ImageView fx:id="UserIcon" accessibleRole="TOGGLE_BUTTON" fitHeight="73.0" fitWidth="61.0" onMouseClicked="#UserIcon_Clicked" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="13.0" top="10.0" />
                </GridPane.margin>
@@ -179,7 +179,7 @@
                   <Image url="@../../Pictures/user(1).png" />
                </image>
             </ImageView>
-            <Label fx:id="UserNametxt" alignment="CENTER" contentDisplay="CENTER" prefHeight="56.0" prefWidth="145.0" text="Walid Ali Abdelnazir Ali" textFill="#a2a8d3" wrapText="true" GridPane.rowIndex="2">
+            <Label fx:id="UserNametxt" alignment="CENTER" contentDisplay="CENTER" prefHeight="56.0" prefWidth="145.0" text="Welcome To Our Platform" textFill="#a2a8d3" wrapText="true" GridPane.rowIndex="2">
                <font>
                   <Font name="Segoe UI Bold Italic" size="15.0" />
                </font>
@@ -204,14 +204,17 @@
       </GridPane>
       <TableView fx:id="MoviesTable" layoutX="558.0" prefHeight="648.0" prefWidth="722.0" style="-fx-background-color: #e7eaf6;" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="283.0" AnchorPane.rightAnchor="1.1368683772161603E-13" AnchorPane.topAnchor="0.0">
         <columns>
-          <TableColumn fx:id="movieNameColumn" maxWidth="300.0" minWidth="160.0" prefWidth="170.0" text="Movie Name" />
-            <TableColumn fx:id="showTypeColumn" maxWidth="100.0" minWidth="80.0" text="Show Type" />
-            <TableColumn fx:id="imdbRatingColumn" maxWidth="100.0" minWidth="80.0" text="IMDb Rating" />
-            <TableColumn fx:id="genresColumn" maxWidth="220.0" minWidth="140.0" prefWidth="150.0" text="Genres" />
-            <TableColumn fx:id="ageRatingColumn" maxWidth="100.0" minWidth="75.0" prefWidth="75.0" text="Age Rating" />
-            <TableColumn fx:id="lengthColumn" maxWidth="100.0" minWidth="60.0" prefWidth="60.0" text="Length" />
-            <TableColumn fx:id="movieLinkColumn" maxWidth="100.0" minWidth="85.0" prefWidth="85.0" text="Watch" />
+          <TableColumn fx:id="movieNameColumn" maxWidth="300.0" minWidth="160.0" prefWidth="200.0" text="Movie Name" />
+            <TableColumn fx:id="showTypeColumn" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Show Type" />
+            <TableColumn fx:id="imdbRatingColumn" maxWidth="80.0" minWidth="80.0" text="IMDb Rating" />
+            <TableColumn fx:id="genresColumn" maxWidth="350.0" minWidth="140.0" prefWidth="180.0" text="Genres" />
+            <TableColumn fx:id="ageRatingColumn" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Age Rating" />
+            <TableColumn fx:id="lengthColumn" maxWidth="80.0" minWidth="80.0" text="Length" />
+            <TableColumn fx:id="movieLinkColumn" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Watch" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
    </children>
 </AnchorPane>
